gitops/applications/base/netbird/netbird-crs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: netbird-mgmt-vs
  namespace: ${ARGOCD_ENV_netbird_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_istio_external_gateway_namespace}/${ARGOCD_ENV_istio_external_wildcard_gateway_name}
  hosts:
    - "netbird.${ARGOCD_ENV_dns_public_subdomain}"
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: netbird-management
            port:
              number: 80
    - match:
        - uri:
            prefix: /management.ManagementService
      route:
        - destination:
            host: netbird-management-grpc
            port:
              number: 80
    - match:
        - uri:
            prefix: /signalexchange.SignalExchange
      route:
        - destination:
            host: netbird-signal
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: netbird-dashboard-mgmt-vs
  namespace: ${ARGOCD_ENV_netbird_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_istio_external_gateway_namespace}/${ARGOCD_ENV_istio_external_wildcard_gateway_name}
  hosts:
    - "netbird-dashboard.${ARGOCD_ENV_dns_public_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: netbird-dashboard
            port:
              number: 80
